[package]
name = "concordium-rust-sdk"
version = "1.1.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.20", features = ["net"] }
futures = "0.3"
serde_json = "1.0.60"
serde = {version = "1", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1"
hex = "0.4.3"
derive_more = "0.99"
semver = "1"
anyhow = "1.0"
# See https://github.com/serde-rs/json/issues/505 for how to be careful.
rust_decimal = { version = "1.25", features = ["serde-float", "serde-arbitrary-precision"]}
ed25519-dalek = "1"
sha2 = "0.9"
rand = {version = "0.7", features = ["small_rng"]}
num = "0.4"
tokio-postgres = { version = "^0.7.5", features = ["with-serde_json-1"], optional = true }

crypto_common = { version = "*", path = "./concordium-base/rust-src/crypto_common", features = ["encryption"] }
id = { version = "*", path = "./concordium-base/rust-src/id", default-features=false }
ecvrf = { version = "*", path = "./concordium-base/rust-src/ecvrf" }
aggregate_sig = { version = "*", path = "./concordium-base/rust-src/aggregate_sig" }
encrypted_transfers = { version = "*", path = "./concordium-base/rust-src/encrypted_transfers" }
eddsa_ed25519 = { version = "*", path = "./concordium-base/rust-src/eddsa_ed25519/" }
concordium-contracts-common = { version = "*", path = "./concordium-base/concordium-contracts-common/concordium-contracts-common", features = ["derive-serde", "sdk"]}
random_oracle = { version = "*", path = "./concordium-base/rust-src/random_oracle/" }
num-bigint = "0.4"
num-traits = "0.2"

[features]
postgres = ["tokio-postgres"]

[dev-dependencies]
structopt = "0.3"
clap = "2.34"
csv = "1.1"
tokio = { version = "*", features = ["full"] }

[[example]]
name = "postgres"
required-features = ["postgres"]

[[example]]
name = "monitor-postgres"
required-features = ["postgres"]

[build-dependencies]
tonic-build = "0.8"
