[package]
name = "concordium-rust-sdk"
version = "2.2.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.21", features = ["net"] }
futures = "0.3"
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1"
hex = "0.4.3"
derive_more = "0.99"
semver = "1"
anyhow = "1.0"
# See https://github.com/serde-rs/json/issues/505 for how to be careful.
rust_decimal = { version = "1.26", features = ["serde-float", "serde-arbitrary-precision"]}
ed25519-dalek = "1"
sha2 = "0.10"
rand = {version = "0.7", features = ["small_rng"]}
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
tokio-postgres = { version = "^0.7.5", features = ["with-serde_json-1"], optional = true }

concordium_base = { version = "*", path = "./concordium-base/rust-src/concordium_base/" }
wasm-chain-integration = { version = "*", path = "./concordium-base/smart-contracts/wasm-chain-integration/", default-features = false, features = ["async"]}

[features]
postgres = ["tokio-postgres"]

[dev-dependencies]
structopt = "0.3"
clap = "2.34"
csv = "1.1"
tokio = { version = "1.21", features = ["full"] }
tokio-test = { version = "0.4" }

[[example]]
name = "postgres"
required-features = ["postgres"]

[[example]]
name = "monitor-postgres"
required-features = ["postgres"]

[build-dependencies]
tonic-build = "0.8"
