[package]
name = "concordium-rust-sdk"
version = "6.0.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
rust-version = "1.73"
license-file = "LICENSE"
readme = "README.md"
include = ["src/", "examples/", "CHANGELOG.md"]
description = "An SDK to use the Concordium blockchain."
repository = "https://github.com/Concordium/concordium-rust-sdk"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.10"}
prost = "0.12"
tokio = { version = "1.27", features = ["net", "macros"] }
futures = "0.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1"
hex = "0.4.3"
derive_more = "0.99"
semver = "1"
anyhow = "1.0"
# See https://github.com/serde-rs/json/issues/505 for how to be careful.
rust_decimal = { version = "1.26", features = ["serde-float", "serde-arbitrary-precision"]}
ed25519-dalek = "2"
sha2 = "0.10"
rand = {version = "0.8", features = ["small_rng"]}
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
http = "0.2"
tokio-stream = "0.1"
base64ct = "=1.6.0"

concordium_base = { version = "7.0", path = "./concordium-base/rust-src/concordium_base/", features = ["encryption"] }
concordium-smart-contract-engine = { version = "6.0", path = "./concordium-base/smart-contracts/wasm-chain-integration/", default-features = false, features = ["async"]}
aes-gcm = { version = "0.10", features = ["std"] }
tracing = "0.1"

[features]
generate-protos = ["tonic-build", "git2"]

[dev-dependencies]
structopt = "0.3"
clap = "2.34"
csv = "1.1"
tokio = { version = "1.27", features = ["full"] }
tokio-test = { version = "0.4" }
tonic = {version = "0.10", features = ["tls", "tls-roots"]} # Use system trust roots.
tracing-subscriber = "0.3"
sqlite = "0.33"

[build-dependencies]
tonic-build = {version = "0.10", optional = true}
git2 = {version = "0.18", optional = true}
